--- a/Frontend/src/components/overviews/overview.module.css
+++ b/Frontend/src/components/overviews/overview.module.css
@@ -6,32 +6,12 @@
 	width: 100%;
 }
 
-.transactionSection{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	flex: 1;
-	height: 100%;
-	padding: 4px 0;
-	gap: 1em;
-	margin: 1em;
-	box-sizing: border-box;
-	border-radius: 15px;
-	overflow: hidden;
-}
-
-.transactionSection header{
-	height: 4em !important;
-	/* border-radius: 15px 15px 0px 0px; */
-}
-
 .budgetSection{
 	display: flex;
 	flex: .90;
 	flex-direction: column;
 	align-items: center;
-	/* height: calc(90% - 4px); */
-	height: calc(70%);
+	height: calc(80%);
 	border-radius: 15px;
 	margin: 1em;
 	border: 1px solid var(--secondary);
@@ -43,7 +23,6 @@
 
 .budgetSection header{
 	height: 5em !important;
-	/* border-radius: 15px 15px 0px 0px; */
 }
 
 .inventorySection{
@@ -86,6 +65,7 @@
 	overflow: hidden;
 	background-color: var(--background-color);
 	box-shadow: 0px 2px 2px var(--textdark);
+	width: 600px;
 }
 
 .sectionChart{
