--- a/Frontend/src/components/overviews/overview.module.css
+++ b/Frontend/src/components/overviews/overview.module.css
@@ -8,12 +8,12 @@
 
 .budgetSection{
 	display: flex;
-	flex: .90;
 	flex-direction: column;
 	align-items: center;
 	height: calc(80%);
 	border-radius: 15px;
-	margin: 1em;
+	flex: 1;
+	width: 100%;
 	border: 1px solid var(--secondary);
 	padding-bottom: 4px;
 	overflow: hidden;
@@ -32,7 +32,7 @@
 	align-items: center;
 	flex: 1;
 	height: 100%;
-	margin: 1em;
+	/* width: 70vw; */
 	width: 100%;
 	border-radius: 15px;
 	border: 1px solid var(--secondary);
@@ -54,6 +54,10 @@
 	font-size: 1em !important;
 }
 
+.Section{
+	width: 50%;
+}
+
 .subSection{
 	display: flex;
 	flex-direction: column;
@@ -65,7 +69,9 @@
 	overflow: hidden;
 	background-color: var(--background-color);
 	box-shadow: 0px 2px 2px var(--textdark);
-	width: 600px;
+	/* width: 40vw; */
+	width: 100%;
+	
 }
 
 .sectionChart{
@@ -106,8 +112,25 @@
 	animation: spin 2s linear infinite;
   }
   
+  
   @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
   }
   
+
+  @media (max-width: 768px) {
+	.subSection{
+		width: 100%;
+	}
+	.inventorySection{
+		margin: auto;
+		width: 100%;
+	}
+	.budgetSection{
+		width: 100%;
+	}
+	.Section{
+		width: 100%;
+	}
+}
