--- a/Frontend/src/partials/records/records.module.css
+++ b/Frontend/src/partials/records/records.module.css
@@ -92,7 +92,16 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	width: 100%;
+	width: 80%;
+	height: 100%;
+}
+
+.cost {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	width: 20%;
 	height: 100%;
 }
 
