--- a/Frontend/src/components/prompts/confirmPrompt.module.css
+++ b/Frontend/src/components/prompts/confirmPrompt.module.css
@@ -130,3 +130,14 @@
 	margin-bottom: 2rem;
 	height: 20%;
 }
+
+.bodyCreated {
+    margin-bottom: 2rem;
+    height: 20%;
+    text-align: center;
+    color: var(--green);
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
