added confirmEdited as a  component

--- a/Frontend/src/components/prompts/confirmPrompt.module.css
+++ b/Frontend/src/components/prompts/confirmPrompt.module.css
@@ -131,6 +131,11 @@
 	height: 20%;
 }
 
+.bodyEdited {
+	margin-bottom: 2rem;
+	height: 20%;
+}
+
 .bodyCreated {
     margin-bottom: 2rem;
     height: 20%;
