--- a/Frontend/src/partials/transactions/transactions.module.css
+++ b/Frontend/src/partials/transactions/transactions.module.css
@@ -60,6 +60,7 @@
 	height: 10%;
 	width: 100%;
 	font-weight: bold;
+	font-size: calc(8px + .75vw);
 }
 
 .tableBody {
@@ -67,6 +68,7 @@
 	flex-direction: column;
 	height: 100%;
 	overflow-y: auto;
+	font-size: calc(12px + .5vw);
 }
 
 .index {
@@ -185,7 +187,7 @@
 	
 	display: flex;
 	flex-direction: column;
-	justify-content: space;
+	justify-content: space-between;
 	align-items: center;
 	min-width: 30%;
 	width: auto;
