--- a/Frontend/src/components/overviews/overview.module.css
+++ b/Frontend/src/components/overviews/overview.module.css
@@ -71,7 +71,6 @@
 	box-shadow: 0px 2px 2px var(--textdark);
 	/* width: 40vw; */
 	width: 100%;
-	
 }
 
 .sectionChart{
@@ -116,7 +115,63 @@
 	color: black;
 	text-align: center;
   }
-  
+
+
+  .money{
+	display: flex;
+	flex-direction: row !important;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	padding: 0 calc(.5em + .75vw);
+	color: black;
+	margin: 1em;
+}
+
+.money label{
+	width: 100%;
+}
+
+.money span{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 4px;
+	width: 100%;
+}
+
+.money input{
+	padding: 0 4px;
+	color: var(--textdark);
+	width: calc(6em + 8vw) !important;
+	height: 3em;
+	background-color: transparent;
+	border-radius: 5px;
+	border: 1px solid var(--textdark);
+	box-shadow: 0px 2px 4px var(--textdark);
+	outline: none;
+}
+
+.buttonDiv{
+	width: 50%;
+}
+
+.buttonDiv button{
+	cursor: pointer;
+	width: 100%;
+	height: 3em;
+	border: 0;
+	outline: 0;
+	background-color: var(--green);
+	border-radius: 8px;
+	transition: all 500ms;
+	margin: 1em;
+}
+.buttonDiv button:hover{
+	background-color: var(--secondary);
+	transition: all 500ms;
+}
   
   @keyframes spin {
 	0% { transform: rotate(0deg); }
