Finished Major Functions

--- a/Frontend/src/partials/records/records.module.css
+++ b/Frontend/src/partials/records/records.module.css
@@ -86,7 +86,13 @@
 	width: 35%;
 	height: 100%;
 }
-
+.amount{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 40%;
+	height: 100%;
+}
 .name {
 	display: flex;
 	justify-content: center;
