--- a/Frontend/src/components/overviews/overview.module.css
+++ b/Frontend/src/components/overviews/overview.module.css
@@ -142,13 +142,24 @@
   .walletForm {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 1rem;
+	width: 50%;
   }
   
+.walletInput{
+	color: var(--textdark);
+	width: 50%;
+	border: 1px solid var(--textdark) !important;
+}
+
+
   .formGroup {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 0.5rem;
+	width: 100%;
   }
   
   .formLabel {
@@ -160,6 +171,7 @@
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
+	width: 100%;
   }
   
   .currencySymbol {
