--- a/Frontend/src/components/wallet/wallet.module.css
+++ b/Frontend/src/components/wallet/wallet.module.css
@@ -14,6 +14,10 @@
 }
 
 .buttonDiv button{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	cursor: pointer;
 	width: 100%;
 	height: 2em;
