--- a/Frontend/src/partials/profile editing/profileEdit.module.css
+++ b/Frontend/src/partials/profile editing/profileEdit.module.css
@@ -82,12 +82,15 @@
 }*/
 
 .edit {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
     cursor: pointer;
     width: 40px;
     height: 40px;
     margin-bottom: 1.5em;
-    background-color: var(--primary);
-    color: var(--textdark);
+    background-color: var(--tertiary);
+    color: var(--textlight);
     margin-left: 3em;
     border-radius: 10px;
     border: none;
